# ECS_C

./: CMakeLists.txt  README.md
include/: ecs.h  ecs_config.h  ecs_types.h
src/: components.c  ecs_util.c  ecs_util.h  entity.c  field.c  mask.c  mask.h  runSytems.c  system.c  world.c
